--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -17,13 +17,15 @@
         <input type="password" placeholder="请输入密码">
     </div>
     <div>
-        <input type="checkbox">
+        <label>
+            <input type="checkbox">
+        </label>
         <span>同意并遵守<a>《XX条款》</a></span>
     </div>
     <a class="login_button align_center" href="">登录</a>
     <div>
         <a href="">忘记密码?</a>
-        <a>免费注册</a>
+        <a href="">免费注册</a>
     </div>
 </div>
 </body>
